--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 0;
+  font-family: 'Poppins', sans-serif;
+}
+
+nav {
+  background-color: #F55A5A;
+  height: 70px;
+  display: flex;
+  justify-content: center;
+  padding: 20px 36px;
+}
+.nav---logo{
+  margin: 0;
+}
+.nav---title{
+  margin: 0;
+  padding-left: 10px;
+  font-size: 15;
+  font-weight: normal;
+  color: #fff;
+}
+
+.card{
+  margin: 100px;
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
+}
+
+.location {
+  color: #2B283A;
+  font-size: 10px;
+  font-weight: normal;
+  margin-bottom: 10px;
+  margin-right: 10pc;
+  letter-spacing: 2px;
+}
+
+.location a{
+  color: #918E9B;
+  font-size: 10px;
+  font-weight: lighter;
+}
+
+.card--title{
+  color: #2B283A;
+  font-size: 25px;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.card--date{
+  margin-top: 15px;
+  font-size: 10px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.card--description{
+  margin-top: 0;
+  font-size: 10px;
+  color: #2B283A;
+  font-weight: normal;
 }
